[package]
name = "lightoros_core"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
libloading = "~0.5.0"
serde = "~1.0.90"
serde_json = "~1.0.39"

[dependencies.clap]
version = "~2.33.0"
default-features = false

[dependencies.lightoros_plugin]
path = "../plugins/trait"