[package]
name = "lightoros_engine"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "~0.5.0"
lightoros_plugin_base = { path = "../plugins/base", features = ["input","output","transform"] }
android_logger = "0.8"
log = "0.4"