[package]
name = "lightoros_input_extra_lua"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
rlua = "0.16.3"

[dependencies.lightoros_plugin]
path = "../../../trait"

[lib]
crate-type = ["dylib"]