[package]
name = "lightoros_output_serial_tpm2"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
serial = "0.4.0"

[dependencies.lightoros_plugin]
path = "../../../trait"

[lib]
crate-type = ["dylib"]
