[package]
name = "lightoros_transform_resize_image"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

[dependencies.lightoros_plugin]
path = "../../../trait"

[lib]
crate-type = ["dylib"]