[package]
name = "lightoros_input_grabber_screen_osx"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.lightoros_plugin]
path = "../../../../trait"

[lib]
crate-type = ["dylib"]