[package]
name = "lightoros_output_serial_tpm2"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serial = "0.4"
serial = { git = "https://github.com/Gamadril/serial-rs" }
lightoros_plugin_base = { path = "../../../base", features = ["output"]  }

[dev-dependencies]
test-cdylib = "1.0"
dlopen = "0.1"
once_cell = "1.3"

[lib]
crate-type = ["cdylib"]

