[package]
name = "lightoros_transform_crop_image_black_border"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lightoros_plugin_base = { path = "../../../base", features = ["transform"] }

[dev-dependencies]
image = "*"
test-cdylib = "1.0"
dlopen = "0.1"
once_cell = "1.3"

[lib]
crate-type = ["cdylib"]
