[package]
name = "lightoros_input_grabber_remote_tcp"
version = "0.1.0"
authors = ["Gamadril <gamadril.dev@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lightoros_plugin_base = { path = "../../../../base", features = ["input"]  }

[lib]
crate-type = ["cdylib"]
